Fix GC logging options for Java 9+
Signed-off-by: Kevin Leimkuhler <kevin@kleimkuhler.com>